--- a/index.html
+++ b/index.html
@@ -28,17 +28,36 @@
     />
     <meta name="twitter:domain" content="사이트 명" />
     <link rel="shortcut icon" type="image/x-icon" href="/favicon.ico" />
+    <!-- icons -->
     <link
-      href="https://fonts.googleapis.com/css2?family=Noto+Sans+KR:wght@100;300;400;500;700;900&display=swap"
-      rel="stylesheet"
+    href="https://fonts.googleapis.com/css?family=Material+Icons|Material+Icons+Outlined|Material+Icons+Round"
+    rel="stylesheet"
+    />
+
+    <!-- symbols -->
+    <link
+    rel="stylesheet"
+    href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@NaN,0,0,0"
+    />
+    <link
+    href="https://fonts.googleapis.com/css2?family=Noto+Sans+KR:wght@100;300;400;500;700;900&display=swap"
+    rel="stylesheet"
+    />
+    <link
+    href="https://fonts.googleapis.com/css2?family=Noto+Serif+KR:wght@400;500;600;700;900&display=swap"
+    rel="stylesheet"
+    />
+    <link
+    href="https://fonts.googleapis.com/css2?family=Gothic+A1:wght@300;400;500;600;700;900&display=swap"
+    rel="stylesheet"
+    />
+    <link
+    rel="stylesheet"
+    href="https://maxst.icons8.com/vue-static/landings/line-awesome/font-awesome-line-awesome/css/all.min.css"
     />
     <link
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css"
-    />
-    <link
-      rel="stylesheet"
-      href="https://maxst.icons8.com/vue-static/landings/line-awesome/font-awesome-line-awesome/css/all.min.css"
     />
     <link
       rel="stylesheet"
@@ -50,37 +69,73 @@
     <script defer src="./dist/js/comm.js"></script>
   </head>
   <body>
-    <div id="u-skip">
+    <!-- <div id="u-skip">
       <a href="#gnb"><span>주요메뉴 바로가기</span></a>
       <a href="#main"><span>컨텐츠 바로가기</span></a>
       <a href="#footer"><span>풋터 바로가기</span></a>
-    </div>
+    </div> -->
     <div class="wrap">
       <header id="header" class="container">
-        <div class="inner">
-          <h1 id="logo">
-            <a href="#">logo</a>
+          <h1 id="logo1" class="logo1">
+            <a href="#">Verve</a>
           </h1>
           <div class="util">
             <ul class="lst-util">
               <li>
-                <!-- a : 링크 연결 / button : 동작처리 -->
                 <button class="btn-g btn-search">
                   <span class="blind">검색</span>
                 </button>
               </li>
               <li>
-                <button class="btn-g btn-burger">
-                  <span class="blind">마이페이지</span>
+                <button class="btn-g btn-bag">
+                  <span class="material-icons-outlined">shopping_bag</span>
+                  <span class="blind">장바구니</span>
                 </button>
-              </li>
+              </li>    
             </ul>
           </div>
-        </div>
       </header>
-      <div class="slide-wrap slide-name">slide</div>
-      <main id="main" class="container">컨텐츠</main>
-      <footer id="footer" class="container">풋터</footer>
-    </div>
+    </div> 
+
+    <main in="main">
+      <!-- section 제목이 있는 그룹 -->
+      <section class="bg-gray section-g section-news">
+        <div class="inner">
+          <h2 class="section-tit"</h2>
+          <div class="section-contents">
+           <p> EYE WEAR ITEM UP TO 10% SALE</p>
+            <a href="#"><img src="../images/cel1.jpg" alt=""></a>
+            EYE WEAR ITEM UP TO 10% SALE
+          </div>
+        </div>
+      </section>
+    </main>
+    <nav class="gnb">
+      <ul class="depth1">
+        <li>
+          <a href="#">NEW</a>
+        </li>
+        <li>
+          <a href="#">BEST</a>
+        </li>
+        <li>
+          <a href="#">WOMEN</a>
+        </li>
+        <li>
+          <a href="#">MEN</a>
+        </li>
+        <li>
+          <a href="#">SHOES</a>
+        </li>
+        <li>
+          <a href="#">ACC</a>
+        </li>
+        <li>
+          <a href="#">EVENT</a>
+        </li>
+      </ul>
+    </nav>
+      
   </body>
 </html>
+
