--- a/goods_list.html
+++ b/goods_list.html
@@ -95,48 +95,46 @@
             </ul>
           </div>
       </header>
-      <main id="main">
-        <!-- section 제목이 있는 그룹 -->
-        <section class=" section-g section-news">
-          <div class="inner">
-            <a href="#" class="main-image"><img src="./images/cel1.jpg" alt=""></a>
-            <div class="section-contents">
-              <strong> NEW SEASON
-                 EYEWEAR ITEM </strong>
-              <p>EYE WEAR ITEM</p>
-              <p>UP TO 10% SALE</p>
-              </div>
-          </div>
-        </section>
-      </main>
-      <nav class="gnb">
-        <ul class="depth1">
-          <li>
-            <a href="#">NEW</a>
-          </li>
-          <li>
-            <a href="#">BEST</a>
-          </li>
-          <li>
-            <a href="#">WOMEN</a>
-          </li>
-          <li>
-            <a href="#">MEN</a>
-          </li>
-          <li>
-            <a href="#">SHOES</a>
-          </li>
-          <li>
-            <a href="#">ACC</a>
-          </li>
-          <li>
-            <a href="#">EVENT</a>
-          </li>
-        </ul>
-      </nav>
     </div> 
 
-   
+    <main in="main">
+      <!-- section 제목이 있는 그룹 -->
+      <section class="bg-gray section-g section-news">
+        <div class="inner">
+          <h2 class="section-tit"</h2>
+          <div class="section-contents">
+            <p>EYE WEAR ITEM UP IP 10% SALE</p>
+            <a href="#"><img src="../images/cel1.jpg" alt=""></a>
+            
+          </div>
+        </div>
+      </section>
+    </main>
+    <nav class="gnb">
+      <ul class="depth1">
+        <li>
+          <a href="#">NEW</a>
+        </li>
+        <li>
+          <a href="#">BEST</a>
+        </li>
+        <li>
+          <a href="#">WOMEN</a>
+        </li>
+        <li>
+          <a href="#">MEN</a>
+        </li>
+        <li>
+          <a href="#">SHOES</a>
+        </li>
+        <li>
+          <a href="#">ACC</a>
+        </li>
+        <li>
+          <a href="#">EVENT</a>
+        </li>
+      </ul>
+    </nav>
       
   </body>
 </html>
