--- a/index.html
+++ b/index.html
@@ -70,11 +70,11 @@
     <script defer src="./dist/js/comm.js"></script>
   </head>
   <body>
-    <!-- <div id="u-skip">
+    <div id="u-skip">
       <a href="#gnb"><span>주요메뉴 바로가기</span></a>
       <a href="#main"><span>컨텐츠 바로가기</span></a>
       <a href="#footer"><span>풋터 바로가기</span></a>
-    </div> -->
+    </div>
     <div class="wrap">
       
       <header data-include-path="./outline/header.html"></header>
