--- a/index.html
+++ b/index.html
@@ -65,8 +65,10 @@
     />
     <link rel="stylesheet" href="./dist/css/comm.css" />
     <!-- <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.4/jquery.min.js"></script> -->
+
     <script src="https://cdn.jsdelivr.net/npm/swiper@10/swiper-bundle.min.js"></script>
     <script defer src="./dist/js/include.js"></script>
+    <script src="./dist/js/youtube.js"></script>
     <script defer src="./dist/js/comm.js"></script>
   </head>
   <body>
@@ -82,10 +84,10 @@
         <div class="swiper-wrapper">
           <div class="swiper-slide">
             <a href="#" class="main-image">
-              <img src="./images/cel1.jpg" alt="cel1"/>
+              <img src="./images/kendal.jpg" alt="kendal"/>
               <div class="section-main-txt">
-                <strong class="main-txt-tit"> NEW SEASON EYEWEAR ITEM </strong>
-                <p class="main-txt">EYE WEAR ITEM</p>
+                <strong class="main-txt-tit"> NEW SEASON  TOTE BAG </strong>
+                <p class="main-txt"> 23 AUTUMN 2ND DROP</p>
                 <p class="main-txt">UP TO 10% SALE</p>
               </div>
             </a>
@@ -94,7 +96,7 @@
             <a href="#" class="main-image">
               <img src="./images/prada.jpg" alt="cel1"/>
               <div class="section-main-txt">
-                <strong class="main-txt-tit">23F/W COLLECTION</strong>
+                <strong class="main-txt-tit">23 F/W COLLECTION</strong>
                 <p class="main-txt">READY TO WEAR</p>
                 <p class="main-txt">UP TO 10% SALE</p>
               </div>
@@ -154,7 +156,7 @@
             </li>
           </ul>
         </nav>
-          <div class="title">
+        <div class="title">
           <h2 class="contents-txt-tit">Men’s Trending Now</h2>
         </div>
         <div class="section-trending">
@@ -239,7 +241,7 @@
         <ul class="marc">
           <li>
               <a href="#">
-                <img src="./images/mshoes.jpg" alt="mhat">
+                <img src="./images/mshoes.jpg" alt="mshoes">
               </a>
               <span class="list-txt">MELISSA X MARC JACOBS CLOG</span>
               <span class="list-price">508,000￦</span>
@@ -253,7 +255,7 @@
           </li>
           <li>
               <a href="#">
-                <img src="./images/mbag.jpg" alt="mhat">
+                <img src="./images/mbag.jpg" alt="mbag">
               </a>
               <span class="list-txt">MELISSA X MARC JACOBS CLOG</span>
               <span class="list-price">508,000￦</span>
@@ -269,12 +271,157 @@
             <p>A study of summer classic items</p>
           </div>
         </div>
+        <ul class="pra">
+          <li>
+            <a href="#">
+              <img src="./images/pra1.jpg" alt="pra1">
+            </a>
+            <span class="list-txt">Prada 로고 자수 우븐 버킷 햇</span>
+            <span class="list-price">1,090,000₩</span>
+          </li>
+          <li>
+            <a href="#">
+              <img src="./images/pra2.jpg" alt="pra2">
+           </a>
+            <span class="list-txt">Prada 샴브레이 반소매 셔츠</span>
+            <span class="list-price">1,620,000₩</span>
+          </li>
+          <li>
+            <a href="#">
+              <img src="./images/pra3.jpg" alt="pra3">
+           </a>
+            <span class="list-txt">Prada 플로럴 프린트 반소매 셔츠</span>
+            <span class="list-price">1,650,000₩</span>
+          </li>
+        </ul>
+        <div class="title">
+          <h2 class="contents-txt-tit">Pre-Open Festival</h2>
+        </div>
+        <div class="section-arrival">
+          <ul class="section-arrival-thumb">
+            <li>
+              <a href="#">
+                <img src="./images/the1.jpg" alt="the1">
+                <strong>THETIS</strong>
+                <p>[클리어런스 세일]</p>
+                <p>STRAP CABLE SUMMER
+                  SLEEVELESS KNIT</p>
+                <strong>119,000￦</strong>
+              </a>
+            </li>
+            <li>
+              <a href="#">
+                <img src="./images/the2.jpg" alt="the2">
+                <strong>THETIS</strong>
+                <p>[클리어런스 세일]</p>
+                <p>HANDMADE HALTER SLEEVELESS KNIT</p>
+                <strong>159,000￦</strong>
+              </a>
+            </li>
+            <li>
+              <a href="#">
+                <img src="./images/the3.jpg" alt="the3">
+                <strong>THETIS</strong>
+                <p>SEE-THROUGH KNEE SOCKS</p>
+                <p>_TT3S706IV</p>
+                <strong>59,000￦</strong>
+              </a>
+            </li>
+            <li>
+              <a href="#">
+                <img src="./images/the4.jpg" alt="the4">
+                <strong>THETIS</strong>
+                <p>[23SPRING]</p>
+                <p>SPANGLE PLAIN SHORTS_TT3S405SL</p>
+                <strong>159,000￦</strong>
+              </a>
+            </li>
+          </ul>
+        </div>
+        <div class="coupon">
+          <img src="./images/coupon.jpg" alt="coupon">
+        </div>
+        <div class="title">
+          <h2 class="contents-txt-tit">2024 FASHION SHOW</h2>
+        </div>
+        <div class="fashion-show">
+          <a href="#" class="lvshow">
+          <img src="./images/lvshow.jpg" alt="lvshow">
+        </a>
+        </div> 
+        <div class="title">
+          <h2 class="contents-txt-tit">Louis Vuitton Men’s Spring-Summer 2024</h2>
+          <p>Fashion Show by Pharrell Williams</p>
+          <br>
+        </div>
+        <section class="youtube">
+          <div class="youtube__area">
+            <div id="player"></div>
+          </div>
+          <div class="youtube__cover"></div>
+        </section>
 
+        <div class="section-arrival">
+          <div class="title">
+            <h2 class="contents-txt-tit">LOOK BOOK</h2>
+          </div>
+          <ul class="section-arrival-look">
+            <li>
+              <a href="#">
+                <img src="./images/look1.jpg" alt="look1">
+              </a>
+            </li>
+            <li>
+              <a href="#">
+                <img src="./images/look2.jpg" alt="look2">
+              </a>
+            </li> 
+            <li>
+              <a href="#">
+                <img src="./images/look3.jpg" alt="look3">
+              </a>
+            </li> 
+            <li>
+              <a href="#">
+                <img src="./images/look4.jpg" alt="look4">
+              </a>
+            </li>  
+          </ul>
+        </div>
+
+        
+
+       
       </main>
-      <footer data-include-path="./outline/footer.html"></footer>
+      <footer class="container">
+        <div class="inner">
+        <div class="category2">
+          <ul class="depth2">
+            <li>
+              <a href="#">로그인</a>
+            </li>
+            <li>
+              <a href="#">고객센터</a>
+            </li>
+            <li>
+              <a href="#">회사소개</a>
+            </li>
+            <li>
+              <a href="#">이용약관</a>
+            </li>
+            <li>
+              <a href="#">개인정보처리방침</a>
+            </li>
+          </ul>
+        </div>
+        <div class-="line">
+          <p>이용약관|개인정보처리방침|소비자 피해보상보험확인 </p>
+        </div>
+      </div>
+      </footer>
 
 
   
-
+    </div>
   </body>
 </html>
