--- a/outline/footer.html
+++ b/outline/footer.html
@@ -1,1 +1,23 @@
-<footer></footer>
+<footer class="container">
+  <div class="inner">
+  <div class="category2">
+    <ul class="depth2">
+      <li>
+        <a href="#">로그인</a>
+      </li>
+      <li>
+        <a href="#">고객센터</a>
+      </li>
+      <li>
+        <a href="#">회사소개</a>
+      </li>
+      <li>
+        <a href="#">이용약관</a>
+      </li>
+      <li>
+        <a href="#">개인정보처리방침</a>
+      </li>
+    </ul>
+  </div>
+</div>
+</footer>
