--- a/outline/header.html
+++ b/outline/header.html
@@ -1,15 +1,89 @@
-<header id="header" class="container">
+  <header id="header" class="container">
   <div class="inner">
     <h1 id="logo1" class="logo1">
       <a href="#">Verve</a>
     </h1>
+          <!--  gnb  -->
+          <nav class="gnb-wrap">
+            <input type="checkbox" id="inpBurger" class="inp-burger" />
+            <label for="inpBurger">
+              <div class="burger">
+                <span class="bar"></span>
+              </div>
+            </label>
+    
+            <!-- Navbar links -->
+            <div id="gnb">
+              <ul class="depth1">
+                <h2> CATEGORY </h2>
+                <li class="active">
+                  <a href="#">WOMAN
+                    <span class="material-symbols-outlined">
+                      add
+                      </span>
+                  </a>
+                  
+                  <ul class="depth2">
+                    <li>
+                      <a href="#">OUTER</a>
+                    </li>
+                    <li>
+                      <a href="#">TOP</a>
+                    </li>
+                    <li>
+                      <a href="#">ONE-PIECE</a>
+                    </li>
+                  </ul>
+                </li>
+                <li>
+                  <a href="#">MAN
+                  <span class="material-symbols-outlined">
+                    add
+                    </span>
+                  </a>
+                </li>
+                <li>
+                  <a href="#">BAG
+                  <span class="material-symbols-outlined">
+                    add
+                    </span>
+                  </a>
+                </li>
+                <li>
+                  <a href="#">SHOES
+                  <span class="material-symbols-outlined">
+                    add
+                    </span>
+                  </a>
+                </li>
+                <li>
+                  <a href="#">ACC
+                  <span class="material-symbols-outlined">
+                    add
+                    </span>
+                  </a>
+                </li>
+                <li>
+                  <a href="#">BEST
+                  <span class="material-symbols-outlined">
+                    add
+                    </span>
+                  </a>
+                </li>
+                <li>
+                  <a href="#">EVENT
+                  <span class="material-symbols-outlined">
+                    add
+                    </span>
+                  </a>
+                </li>
+              </ul>
+            </div>
+          </nav>
+        </div>
+        <!-- input -->
     <div class="util">
       <ul class="lst-util">
-        <li>
-          <button class="btn-g btn-search">
-            <span class="blind">검색</span>
-          </button>
-        </li>
         <li>
           <button class="btn-g btn-bag">
             <span class="material-icons-outlined">shopping_bag</span>
@@ -17,7 +91,5 @@
           </button>
         </li>
       </ul>
-    </div>
-  </div>
-  
+    </div> 
 </header>
