--- a/index.html
+++ b/index.html
@@ -135,10 +135,9 @@
       
 
       <nav id="bottommenu" class="bottom-menu-v2">
-        <a href="#category" class="category">
-          <span class="material-symbols-outlined">menu</span>
-          <span class="blind">메뉴</span>
-          
+        <a href="#search" class="search">
+          <span class="material-symbols-outlined">search</span>
+          <span class="blind">검색</span>
         </a>
         <a href="#favorite" class="favorite">
           <span class="material-symbols-outlined">favorite</span>
@@ -146,7 +145,7 @@
         </a>
         <a href="#home" class="home">
           <span class="material-symbols-outlined">home</span>
-            <span class="blind">찜</span>
+            <span class="blind">홈</span>
         </a>
         <a href="#bell" class="bell">
           <span class="material-symbols-outlined">notifications</span>
@@ -159,7 +158,7 @@
 
       </nav>
       <main id="main" class="container">
-        <nav id="nav" class="gnb">
+        <nav id="nav" class="navbar">
           <ul class="depth1">
             <li>
               <a href="#">NEW</a>
@@ -376,11 +375,11 @@
           </ul>
         </div>
       </section>
-        <div class="coupon">
+        <section class="coupon">
           <a href="#">
           <img src="./images/coupon.jpg" alt="coupon">
           </a>
-        </div>
+        </section>
         <section class="section-fashion show">
           <h2 class="contents-txt-tit">2024 FASHION SHOW</h2>
         <div class="fashion-show">
