--- a/outline/footer.html
+++ b/outline/footer.html
@@ -1,6 +1,5 @@
 <footer>
-  <div class="inner">
-  <div class="category2">
+  <div class="category2 container">
     <ul class="depth2">
       <li>
         <a href="#">로그인</a>
@@ -19,5 +18,21 @@
       </li>
     </ul>
   </div>
-</div>
+  <div class="footer1 container">
+    <p>
+      (주)VERVE, 온라인사업총괄 도한준
+      사업자 등록번호 : 211-87-87724 대표전화: 1544-5114
+      통신판매업신고 : 제 2010-서울강남-00066호</p>
+  </div>
+  <div class="footer-right container">
+      <a href="#">
+        <img src="./images/youtubeimg.jpg" alt="youtubeimg">
+      </a>
+      <a href="#">
+        <img src="./images/Facebook.jpg" alt="youtubeimg">
+      </a>
+      <a href="#">
+        <img src="./images/Instagram.jpg" alt="youtubeimg">
+      </a>
+  </div>
 </footer>
