--- a/outline/header.html
+++ b/outline/header.html
@@ -18,9 +18,9 @@
                 <h2> CATEGORY </h2>
                 <li class="active">
                   <a href="#">WOMAN
-                    <span class="material-symbols-outlined">
+                    <!-- <span class="material-symbols-outlined">
                       add
-                      </span>
+                      </span> -->
                   </a>
                   
                   <ul class="depth2">
@@ -37,9 +37,9 @@
                 </li>
                 <li>
                   <a href="#">MAN
-                  <span class="material-symbols-outlined">
+                  <!-- <span class="material-symbols-outlined">
                     add
-                    </span>
+                    </span> -->
                   </a>
                 </li>
                 <li>
